--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,34 @@ canvas {
   text-align: center;
 }
 
-.icon-fa
+.social-links {
+  text-align: center;
+}
+
+.social-links ul {
+  padding: 0px 0px 0px 0px;
+  display: block;
+  text-align: center;
+}
+
+.social-links li {
+  display: inline-block;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.social-links a {
+  display: block;
+  color: #777777;
+  -o-transition:.3s;
+  -ms-transition:.3s;
+  -moz-transition:.3s;
+  -webkit-transition:.3s;
+}
+
+.social-links a:hover {
+  color: white;
+}
 
 .nav-main {
   height: 100px;
@@ -58,6 +85,10 @@ canvas {
 	bottom: 0;
 	text-align: center;
   white-space: nowrap;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .nav-main ul {
@@ -78,6 +109,7 @@ canvas {
   display:inline-block;
   margin-right: 10px;
   margin-left: 10px;
+  cursor: pointer;
 }
 
 .nav-main a {
@@ -97,9 +129,78 @@ canvas {
   text-decoration: none;
 }
 
-.projects {
+.nav-fixed {
+  opacity: 0;
+  display: block;
+  position: fixed;
+  height: 100px;
+  top: 25px;
+  right: 25px;
+  text-align: center;
+  white-space: nowrap;
+  z-index: 1;
+}
+
+.nav-fixed ul {
+  width: 300px;
+  display: block;
+  border-bottom: 1px solid white;
+  text-align: center;
+  padding: 0px 0px 0px 0px;
+}
+
+.nav-fixed li {
+  display: inline-block;
+  margin-right: 5px;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+.nav-fixed a {
+  display: block;
+  color: white;
+  text-transform: uppercase;
+  padding-bottom: 5px;
+  border-bottom: 3px solid transparent;
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+}
+
+.nav-fixed a:hover {
+  border-bottom: 3px solid white;
+  text-decoration: none;
+}
+
+#projects {
   position: relative;
-  height: 100vh;
+  height: 100%;
+  padding-top: 75px;
+}
+
+.top-buffer {
+  padding-top: 30px;
+}
+
+.row.row-grid [class*="col-"] {
+  margin-top: 25px;
+}
+
+.project-image {
+  opacity: 1;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
+.image-hover a img {
+  opacity: 1;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
+.image-hover a:hover img {
+  opacity: .5;
 }
 
 /* ==========================================================================
