--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,8 @@ canvas {
 .social-links {
   text-align: center;
   display: block;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .social-links ul {
@@ -220,6 +222,7 @@ canvas {
 #footer {
   position: relative;
   width: 100%;
+  margin-bottom: 15px;
 }
 
 /* ==========================================================================
