--- a/css/main.css
+++ b/css/main.css
@@ -83,10 +83,10 @@ canvas {
 .social-links a {
   display: block;
   color: #777777;
-  -o-transition:.3s;
-  -ms-transition:.3s;
-  -moz-transition:.3s;
-  -webkit-transition:.3s;
+  -o-transition:.2s ease-out;
+  -ms-transition:.2s ease-out;
+  -moz-transition:.2s ease-out;
+  -webkit-transition:.2s ease-out;
 }
 
 .social-links a:hover {
@@ -255,6 +255,25 @@ canvas {
 
 #contact {
   position: relative;
+  height: auto;
+  background-color: #212121;
+}
+
+.contact-email {
+  margin-bottom: 25px;
+}
+
+.contact-email a {
+  color: #777777;
+  font-size: 14pt;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300;
+  cursor: pointer;
+}
+
+.contact-email a:hover {
+  color: #33e3f5;
+  text-decoration: none;
 }
 
 #footer {
