--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,22 @@ canvas {
   color: white;
   font-size: 28pt;
   font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 400;
+  margin-left: 30px;
+}
+
+.body-paragraph-header {
+  color: white;
+  font-size: 22pt;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300;
+  text-align: center;
+}
+
+.body-paragraph-subheader {
+  color: white;
+  font-size: 18pt;
+  font-family: 'Source Sans Pro', sans-serif;
   font-weight: 200;
   text-align: center;
 }
@@ -200,14 +216,16 @@ canvas {
 
 #about {
   position: relative;
-  min-height: 100%;
+  height: auto;
   background-color: #161616;
+  padding-bottom: 30px;
 }
 
 #projects {
   position: relative;
   min-height: 100%;
   background-color: #1c1c1c;
+  padding-bottom: 30px;
 }
 
 .top-buffer {
@@ -267,13 +285,14 @@ canvas {
   color: #777777;
   font-size: 14pt;
   font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   cursor: pointer;
 }
 
 .contact-email a:hover {
   color: #33e3f5;
   text-decoration: none;
+  /*TODO: Smooth the hover animation*/
 }
 
 #footer {
