--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,11 @@ canvas {
   z-index: 0;
 }
 
+u {
+  text-decoration: none;
+  border-bottom: 1px solid white;
+}
+
 #particles-js {
   z-index: 0;
 }
@@ -44,7 +49,14 @@ canvas {
   font-size: 28pt;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
-  margin-left: 30px;
+  margin-left: -30px;
+  margin-bottom: 30px;
+}
+
+@media (max-width: 800px) {
+  .body-subheader {
+    margin-left: 0px;
+  }
 }
 
 .body-paragraph {
@@ -77,6 +89,14 @@ canvas {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
   text-align: left;
+}
+
+.body-paragraph-light {
+  color: white;
+  font-size: 12pt;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300;
+  text-align: center;
 }
 
 .body-paragraph-container {
@@ -272,11 +292,6 @@ canvas {
 
 .image-hover a:hover img {
   opacity: .5;
-}
-
-.image-hover p {
-  position: absolute;
-  top: 50%;
 }
 
 #contact {
