--- a/css/main.css
+++ b/css/main.css
@@ -141,11 +141,17 @@ u {
   height: 100px;
 	text-align: center;
   position: absolute;
-  bottom: 100px;
+  bottom: 200px;
   left: 0;
   right: 0;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media (max-height: 800px) {
+  .nav-main {
+    bottom: 0px;
+  }
 }
 
 .nav-main ul {
