--- a/css/main.css
+++ b/css/main.css
@@ -356,6 +356,18 @@ u {
   text-decoration: none;
 }
 
+::-webkit-scrollbar-track {
+	background-color: #161616;
+}
+
+::-webkit-scrollbar {
+	width: 4px;
+	background-color: #777777;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #777777;
+}
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
