--- a/drums/style.css
+++ b/drums/style.css
@@ -19,7 +19,7 @@ body,html {
 
 .key {
   border: .4rem solid black;
-  border-radius: .5rem;
+  border-radius: 10jrem;
   margin: 1rem;
   font-size: 1.5rem;
   padding: 1rem .5rem;
