Remove unnecessary code

--- a/css/main.css
+++ b/css/main.css
@@ -258,7 +258,7 @@ u {
   text-decoration: none;
 }
 
-.navbar-fixed .highlight {
+.nav-fixed .highlight {
   border-bottom: 3px solid white;
   text-decoration: none;
 }
